Hotfix - Moved FXML, fix Gradle to build project